--- a/site/public/dashboard/jogo2.html
+++ b/site/public/dashboard/jogo2.html
@@ -19,11 +19,9 @@
                         <img src="../assets/icongato.svg" style="height: 80px;">
                         <img src="../assets/iconfoto.svg" style="height: 21px;">
                     </div>
-                    <span id="nomeUsuario">Samu</span>
+                    <span id="spanNomeUsuario">Samu</span>
                 </div>
             </div>
-
-
 
             <div class="opcoes">
                 <ul>
@@ -86,7 +84,6 @@
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
