--- a/site/public/dashboard/jogo.html
+++ b/site/public/dashboard/jogo.html
@@ -4,6 +4,7 @@
 <head>
     <title>Dashboard | Pontuação</title>
     <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/jogo.css">
 </head>
 
 <body>
@@ -53,6 +54,19 @@
             <div class="container">
                 <div class="topo">
                     <span>QUAL É O PERSONAGEM?</span>
+                </div>
+
+                <div class="conteudo">
+                    <span>Como funciona o jogo</span><br><br>
+                    <div class="comoFunciona">
+                        <ul>
+                            <li>Existe uma lista de 24 personagens que aparecem de forma aleatória</li>
+                            <li>Seu objetivo é descobrir e acertar o nome de cada personagem</li>
+                            <li>Caso não saiba o nome do personagem, aperte em Outro Personagem para pular o personagem</li>
+                            <li>Caso saiba o nome do personagem, aperte em Verificar</li>
+                        </ul>
+                        <span>*Personagens verificados corretamente, não se repetem</span>
+                    </div>
                 </div>
 
                 <div class="botoes">
