--- a/site/public/dashboard/quiz.html
+++ b/site/public/dashboard/quiz.html
@@ -4,6 +4,7 @@
 <head>
     <title>Dashboard | Pontuação</title>
     <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/jogo.css">
 </head>
 
 <body>
@@ -20,8 +21,6 @@
                     <span id="spanNomeUsuario">Samu</span>
                 </div>
             </div>
-
-
 
             <div class="opcoes">
                 <ul>
@@ -50,18 +49,33 @@
             </div>
         </div>
 
+        <!-- parte da direita -->
         <div class="area">
-            <div class="topo">
-                <span>VOCÊ REALMENTE CONHECE SHREK?</span>
-            </div>
-    
-            <div class="botoes">
-                <a href="quiz2.html">
-                    <button class="botao jogo">Iniciar quiz</button>
-                </a>
+            <div class="container">
+                <div class="topo">
+                    <span>VOCÊ REALMENTE CONHECE SHREK?</span>
+                </div>
+
+                <div class="conteudo">
+                    <span>Como funciona o jogo</span><br><br>
+                    <div class="comoFunciona">
+                        <ul>
+                            <li>Existe 10 perguntas sobre Universo do Shrek que vem de forma aleatória</li>
+                            <li>Seu objetivo é acertar o maior número de perguntas</li>
+                            <li>Existe 4 alternativas e somente uma delas esta correta</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="botoes">
+                    <a href="quiz2.html">
+                        <button class="botao jogo">Iniciar jogo</button>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
+</body>
 
 </body>
 
