--- a/site/public/index.html
+++ b/site/public/index.html
@@ -2,15 +2,15 @@
 <html lang="pt-br">
 
 <head>
-    <title>Shrek | Home</title>
-    <link rel="stylesheet" href="css/index.css">
+    <title>Shrek | Filmes</title>
+    <link rel="stylesheet" href="css/filmes.css">
 </head>
 
 <body>
     <div class="header">
         <div class="container">
             <div class="titulo">
-                <h1>SHREK</h1>
+                <img src="assets/logo.svg" height="100%" alt="">
             </div>
 
             <div class="navbar">
@@ -19,7 +19,7 @@
                 <a href="personagens.html">Personagens</a>
             </div>
 
-            
+
             <div class="cadastroLogin">
                 <div class="login">
                     <a href="login.html"><span>Login</span></a>
@@ -28,17 +28,8 @@
                     <a href="cadastro.html"><span>Cadastro</span></a>
                 </div>
             </div>
-            </ul>
         </div>
     </div>
-
-    <!-- <div class="banner">
-        <div class="container">
-            <span>We tell stories about dreams, and the journeys our unconventional heroes take to make them come
-                true.</span>
-        </div>
-    </div> -->
-
 </body>
 
 </html>
