--- a/site/public/dashboard/jogo.html
+++ b/site/public/dashboard/jogo.html
@@ -14,11 +14,7 @@
                 <img src="../assets/logo.svg">
 
                 <div class="infoUsuario">
-                    <div class="icons">
-                        <img src="../assets/icongato.svg" style="height: 80px;">
-                        <img src="../assets/iconfoto.svg" style="height: 21px;">
-                    </div>
-                    <span id="spanNomeUsuario">Samu</span>
+                    <span>Bem vindo, <span id="spanNomeUsuario">Samu</span></span>
                 </div>
             </div>
 
@@ -62,7 +58,8 @@
                         <ul>
                             <li>Existe uma lista de 24 personagens que aparecem de forma aleatória</li>
                             <li>Seu objetivo é descobrir e acertar o nome de cada personagem</li>
-                            <li>Caso não saiba o nome do personagem, aperte em Outro Personagem para pular o personagem</li>
+                            <li>Caso não saiba o nome do personagem, aperte em Outro Personagem para pular o personagem
+                            </li>
                             <li>Caso saiba o nome do personagem, aperte em Verificar</li>
                         </ul>
                         <span>*Personagens verificados corretamente, não se repetem</span>
