--- a/site/public/dashboard/jogo2.html
+++ b/site/public/dashboard/jogo2.html
@@ -15,11 +15,7 @@
                 <img src="../assets/logo.svg">
 
                 <div class="infoUsuario">
-                    <div class="icons">
-                        <img src="../assets/icongato.svg" style="height: 80px;">
-                        <img src="../assets/iconfoto.svg" style="height: 21px;">
-                    </div>
-                    <span id="spanNomeUsuario">Samu</span>
+                    <span>Bem vindo, <span id="spanNomeUsuario">Samu</span></span>
                 </div>
             </div>
 
