--- a/site/public/index.html
+++ b/site/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Shrek | Filmes</title>
-    <link rel="stylesheet" href="css/filmes.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -29,6 +29,53 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="banner">
+        <div class="container">
+            <div class="comeco">
+                <span>CONHEÇA O UNIVERSO DE SHERK E SEUS AMIGOS</span>
+                <img src="assets/banner.svg" style="height: 600px;">
+            </div>
+
+            <div class="mais">
+                <span class="titul">AQUI NO SITE, VOCÊ PODE VER:</span>
+                <div class="linha">
+                    <div class="quadrado">
+                        <span class="center">FILMES </span>
+                        <span>Uma seção que mostra cada um dos filmes e um detalhamento de cada um</span>
+                    </div>
+                    <div class="quadrado">
+                        <span class="center">PERSONAGENS </span>
+                        <span>Uma seção que mostra os personagens mais importantes e relevantes da obra </span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="fim">
+                <span class="titul">AO FAZER O CADASTRO, VOCÊ TERÁ ACESSO Á:</span>
+                <div class="linha">
+                    <div class="quadrado">
+                        <span>Minigame</span>
+                        <img src="assets/exmpMinigame.svg" alt="">
+                    </div>
+                    <div class="quadrado">
+                        <span>Quiz</span>
+                        <img src="assets/exmpQuiz.svg" alt="">
+                    </div>
+                </div>
+                <div class="linha">
+                    <div class="quadrado">
+                        <span>Suas Estatisticas</span>
+                        <img src="assets/exmpEstatistica.svg" alt="">
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+
+
+
     </div>
 </body>
 
