--- a/site/public/dashboard/estatistica.html
+++ b/site/public/dashboard/estatistica.html
@@ -15,11 +15,8 @@
       <div class="navHeader">
         <img src="../assets/logo.svg">
         <div class="infoUsuario">
-          <div class="icons">
-            <img src="../assets/icongato.svg" style="height: 80px;">
-            <img src="../assets/iconfoto.svg" style="height: 15px;">
-          </div>
-          <span id="spanNomeUsuario">Samu</span>
+          <span>Bem vindo, <span id="spanNomeUsuario">Samu</span></span>
+
         </div>
       </div>
 
